--- a/views/register.ejs
+++ b/views/register.ejs
@@ -34,16 +34,16 @@
             Sign Up with Google
           </a>
         </div>
-        <!-- <div class="card-body">
+        <div class="card-body">
           <a
             class="btn btn-block btn-social btn-facebook"
-            href="/auth/google"
+            href="/auth/facebook"
             role="button"
           >
             <i class="fab fa-facebook"></i>
             Sign Up with Facebook
           </a>
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
